--- a/style/home.css
+++ b/style/home.css
@@ -120,7 +120,7 @@
 .section2 {
     min-height: 88vw;
     width: 100%;
-    background-image: url(/images/about_bg.webp);
+    background-image: url(../images/about_bg.webp);
     background-size: cover;
     background-attachment: fixed;
     margin-top: -1px;
