--- a/style/about.css
+++ b/style/about.css
@@ -86,7 +86,7 @@
 }
 
 .nav .active::before {
-    content: url(/images/desktop-lines\ 1.webp);
+    content: url(../images/desktop-lines\ 1.webp);
     position: absolute;
     top: 2.9vw;
     margin-left: 0.7vw;
@@ -223,7 +223,7 @@
     position: relative;
     width: 100%;
     height: fit-content;
-    background-image: url(/images/about/bg\ –\ 1.webp);
+    background-image: url(../images/about/bg\ –\ 1.webp);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -320,7 +320,7 @@
     position: relative;
     width: 100%;
     height: fit-content;
-    background-image: url(/images/about/bg.webp);
+    background-image: url(../images/about/bg.webp);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -368,7 +368,7 @@
 
 
 footer {
-    background-image: url(/images/footer_bg.webp);
+    background-image: url(../images/footer_bg.webp);
     width: 100%;
     background-size: cover;
     height: 50vh;
