--- a/style/home.css
+++ b/style/home.css
@@ -92,7 +92,7 @@
 }
 
 .nav .active::before {
-    content: url(/images/desktop-lines\ 1.webp);
+    content: url(../images/desktop-lines\ 1.webp);
     position: absolute;
     top: 2.9vw;
     margin-left: 0.7vw;
@@ -258,7 +258,7 @@
 
 .section3 {
     width: 100%;
-    background-image: url(/images/bg_pattern.webp);
+    background-image: url(../images/bg_pattern.webp);
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -335,7 +335,7 @@
 
 .section4 {
     width: 100%;
-    background-image: url(/images/bg_pattern.webp);
+    background-image: url(../images/bg_pattern.webp);
     height: fit-content;
     display: flex;
     align-items: center;
@@ -365,7 +365,7 @@
 .section5 {
     width: 100%;
     height: fit-content;
-    background-image: url(/images/online_bg.webp);
+    background-image: url(../images/online_bg.webp);
     background-size: cover;
     margin-top: -9vw;
 
@@ -450,7 +450,7 @@
 
 
 footer {
-    background-image: url(/images/footer_bg.webp);
+    background-image: url(../images/footer_bg.webp);
     width: 100%;
     background-size: cover;
     height: 50vh;
@@ -621,7 +621,7 @@ footer .social a {
 
 @media screen and (max-width:1100px) {
     .nav .active::before {
-        content: url(/images/desktop-lines\ 1.webp);
+        content: url(../images/desktop-lines\ 1.webp);
         position: absolute;
         top: 2.4vw;
         margin-left: 0.3vw;
@@ -630,7 +630,7 @@ footer .social a {
 
 @media screen and (max-width:900px) {
     .nav .active::before {
-        content: url(/images/desktop-lines\ 1.webp);
+        content: url(../images/desktop-lines\ 1.webp);
         position: absolute;
         top: 2vw;
     }
@@ -675,7 +675,7 @@ footer .social a {
     .section2 {
         min-height: 140vw;
         width: 100%;
-        background-image: url(/images/about_bg.webp);
+        background-image: url(../images/about_bg.webp);
         background-size: cover;
         background-attachment: fixed;
         margin-top: -1px;
