--- a/style/location.css
+++ b/style/location.css
@@ -46,7 +46,7 @@
     width: 100%;
     min-height: 100vh;
     overflow: hidden;
-    background-image: url(/images/bg_pattern.webp);
+    background-image: url(../images/bg_pattern.webp);
     /* background-position: center; */
     /* background-size: cover; */
     /* background-repeat: repeat-y; */
@@ -90,7 +90,7 @@
 }
 
 .nav .active::before {
-    content: url(/images/desktop-lines\ 1.webp);
+    content: url(../images/desktop-lines\ 1.webp);
     position: absolute;
     top: 2.9vw;
     margin-left: 2.7vw;
@@ -297,7 +297,7 @@
     width: 100%;
     min-height: 170vh;
     position: relative;
-    background-image: url(/images/location/map-background.webp);
+    background-image: url(../images/location/map-background.webp);
     background-size: cover;
     padding: 0 8%;
 }
@@ -410,7 +410,7 @@
 
 
 footer {
-    background-image: url(/images/footer_bg.webp);
+    background-image: url(../images/footer_bg.webp);
     width: 100%;
     background-size: cover;
     height: 50vh;
