--- a/style/order.css
+++ b/style/order.css
@@ -87,7 +87,7 @@
 }
 
 .nav .active::before {
-    content: url(/images/Menu_hover.webp);
+    content: url(../images/Menu_hover.webp);
     position: absolute;
     top: 2.9vw;
     margin-left: 2.9vw;
@@ -101,7 +101,7 @@
 .section2 {
     height: fit-content;
     width: 100%;
-    background-image: url(/images/OP/background.webp);
+    background-image: url(../images/OP/background.webp);
     background-size: contain;
     background-position: bottom;
 }
@@ -208,7 +208,7 @@
 .section3 {
     height: fit-content;
     width: 100%;
-    background-image: url(/images/bg_pattern.webp);
+    background-image: url(../images/bg_pattern.webp);
     background-size: contain;
     display: flex;
     align-items: center;
@@ -299,7 +299,7 @@
 .section4 {
     height: fit-content;
     width: 100%;
-    background-image: url(/images/bg_pattern.webp);
+    background-image: url(../images/bg_pattern.webp);
     background-size: contain;
     background-attachment: fixed;
     margin-bottom: -23vw;
@@ -397,7 +397,7 @@ body {
 
 
 footer {
-    background-image: url(/images/footer_bg.webp);
+    background-image: url(../images/footer_bg.webp);
     width: 100%;
     background-size: cover;
     height: 50vh;
@@ -599,7 +599,7 @@ footer .social a {
 
 @media screen and (max-width:3400px) {
     .nav .active::before {
-        content: url(/images/Menu_hover.webp);
+        content: url(../images/Menu_hover.webp);
         position: absolute;
         top: 3vw;
         margin-left: 2.9vw;
@@ -608,7 +608,7 @@ footer .social a {
 
 @media screen and (max-width:1100px) {
     .nav .active::before {
-        content: url(/images/Menu_hover.webp);
+        content: url(../images/Menu_hover.webp);
         position: absolute;
         top: 2.4vw;
         margin-left: 2.9vw;
@@ -617,7 +617,7 @@ footer .social a {
 
 @media screen and (max-width:900px) {
     .nav .active::before {
-        content: url(/images/Menu_hover.webp);
+        content: url(../images/Menu_hover.webp);
         position: absolute;
         top: 2vw;
     }
@@ -658,7 +658,7 @@ footer .social a {
     /* .section2 {
         height: fit-content;
         width: 100%;
-        background-image: url(/images/Mobile-homepage/packaging-box.webp);
+        background-image: url(../images/Mobile-homepage/packaging-box.webp);
     } */
     .section2 .title-2 h2 {
         margin-top: -20vw;
@@ -740,7 +740,7 @@ footer .social a {
     .section3 {
         height: fit-content;
         width: 100%;
-        background-image: url(/images/bg_pattern.webp);
+        background-image: url(../images/bg_pattern.webp);
         background-size: contain;
         display: flex;
         align-items: center;
